remove delay from game loop